Added API function

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@ body {
   height: 100%;
   width: 100%;
   text-align: center;
+  background-image: url("https://c.tenor.com/cOh9sUnluWEAAAAM/inugami-korone-furball.gif");
+  background-size: cover;
 }
